Fix text overflow bugs in messages

--- a/admin/src/sass/style.sass
+++ b/admin/src/sass/style.sass
@@ -66,8 +66,43 @@ html,body,h1,h2,h3,h4,h5
   overflow: hidden
   text-overflow: ellipsis
 
-#message-table :not(thead) tr :not(:first-child)
+#message-table table :not(thead) tr :not(:first-child)
   cursor: pointer
+
+#message-table table
+  table-layout: fixed
+
+#message-table td:first-child, th:first-child
+  width: 50px
+
+#message-table td:nth-child(2), th:nth-child(2)
+  width: 70px
+
+#message-table td:nth-child(3), th:nth-child(3)
+  overflow: hidden
+  text-overflow: ellipsis
+
+#message-table td:nth-child(4), th:nth-child(4)
+  width: 165px
+
+#message-modal table
+  table-layout: fixed
+
+#message-modal table tr td:nth-child(1)
+  width: 20%
+
+#message-modal header h2
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+  padding-right: 5px
+
+#message-modal .modal-email-field
+  overflow: hidden
+  text-overflow: ellipsis
+
+#message-modal .modal-message-field
+  overflow: scroll
 
 #blocks-table :not(thead) tr
   cursor: pointer
